# vlen

./: Cargo.toml  LICENSE-VU128.txt  LICENSE.txt  README.md
benches/: encode_decode.rs  leb128_comparison.rs  simd_benchmarks.rs
tests/: const_api_test.rs  property_tests.rs  serde_tests.rs  tests.rs
vlen/: const_decode.rs  const_encode.rs  decode.rs  encode.rs  helpers.rs  mod.rs  serde.rs
vlen/simd/: aarch64_simd.rs  generic_simd.rs  mod.rs  x86_64_simd.rs
